--- a/embed_table.html
+++ b/embed_table.html
@@ -4,37 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinic Prices - Dynamic Table</title>
-    <style>
-        /* Include any custom styles here, if necessary */
-    </style>
 </head>
 <body>
     <div id="table-container" class="simple-table-wrapper"></div>
 
     <script>
         async function loadTable() {
-            const proxyUrl = 'https://api.allorigins.win/get?url=';
+            const proxyUrl = 'https://api.allorigins.win/raw?url=';
             const targetUrl = encodeURIComponent('https://rbclinicinfo.weebly.com/');
 
             try {
                 const response = await fetch(proxyUrl + targetUrl);
-                const data = await response.json();
+                const text = await response.text();
                 const parser = new DOMParser();
-                const doc = parser.parseFromString(data.contents, 'text/html');
+                const doc = parser.parseFromString(text, 'text/html');
                 const tableWrapper = doc.querySelector('.simple-table-wrapper');
-
+                
                 if (tableWrapper) {
+                    // Inject the table HTML
+                    document.getElementById('table-container').innerHTML = tableWrapper.outerHTML;
+
                     // Fetch and include the CSS
                     const stylesheets = doc.querySelectorAll('link[rel="stylesheet"]');
                     stylesheets.forEach(stylesheet => {
                         const link = document.createElement('link');
                         link.rel = 'stylesheet';
-                        link.href = proxyUrl + encodeURIComponent(stylesheet.href);
+                        link.href = stylesheet.href.startsWith('http') ? stylesheet.href : 'https://rbclinicinfo.weebly.com/' + stylesheet.getAttribute('href');
                         document.head.appendChild(link);
                     });
 
-                    // Inject the table HTML
-                    document.getElementById('table-container').innerHTML = tableWrapper.outerHTML;
+                    // Fetch and include inline styles
+                    const styles = doc.querySelectorAll('style');
+                    styles.forEach(style => {
+                        const styleTag = document.createElement('style');
+                        styleTag.innerHTML = style.innerHTML;
+                        document.head.appendChild(styleTag);
+                    });
                 } else {
                     document.getElementById('table-container').innerHTML = '<p>Table not found.</p>';
                 }
