--- a/embed_table.html
+++ b/embed_table.html
@@ -4,18 +4,26 @@ async function loadTable() {
 
     try {
         const response = await fetch(proxyUrl + targetUrl);
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+
         const text = await response.text();
         const parser = new DOMParser();
         const doc = parser.parseFromString(text, 'text/html');
         const tableWrapper = doc.querySelector('.simple-table-wrapper');
 
+        const tableContainer = document.getElementById('table-container');
         if (tableWrapper) {
-            document.getElementById('table-container').innerHTML = tableWrapper.outerHTML;
+            tableContainer.innerHTML = tableWrapper.outerHTML;
         } else {
-            document.getElementById('table-container').innerHTML = '<p>Table not found.</p>';
+            tableContainer.innerHTML = '<p>Table not found.</p>';
         }
     } catch (error) {
         console.error('Error loading the table:', error);
-        document.getElementById('table-container').innerHTML = '<p>Error loading the table.</p>';
+        document.getElementById('table-container').innerHTML = `<p>Error loading the table: ${error.message}</p>`;
     }
 }
+
+// Call the function to load the table when the script runs
+loadTable();
