--- a/embed_table.html
+++ b/embed_table.html
@@ -65,7 +65,7 @@
     <script>
         async function loadTables() {
             const proxyUrl = 'https://api.allorigins.win/raw?url=';
-            const targetUrl = 'https://rbclinicinfo.weebly.com/';
+            const targetUrl = 'https://www.cheshiretravelclinic.co.uk/prices.html'; // New target URL
 
             try {
                 console.log('Fetching data from', targetUrl);
