--- a/embed_table1.html
+++ b/embed_table1.html
@@ -12,40 +12,12 @@
             font-style: normal;
         }
 
-        body, table, td {
+        body {
             font-family: 'CustomFontName', Arial, sans-serif;
         }
 
         .simple-table-wrapper {
             padding: 20px 0;
-        }
-        .simple-table {
-            width: 100%;
-            border: 1px solid #C9CDCF;
-            border-spacing: 0;
-        }
-        .simple-table td.cell {
-            border-right: 1px solid #C9CDCF;
-            border-bottom: 1px solid #C9CDCF;
-            word-break: break-word;
-            background-color: #FFFFFF;
-            width: 25%;
-        }
-        .simple-table td.cell .paragraph {
-            width: 90%;
-            margin: 0 5%;
-            padding-bottom: 10px;
-            padding-top: 10px;
-            text-align: center;
-        }
-        .simple-table tr:last-child td {
-            border-bottom: none;
-        }
-        .simple-table td:last-of-type {
-            border-right: none;
-        }
-        .simple-table .empty-content-area-element {
-            padding-left: 0px !important;
         }
     </style>
 </head>
