--- a/bloods.html
+++ b/bloods.html
@@ -48,7 +48,7 @@
         }
         .simple-table.style-top tr:first-child td,
         .simple-table.style-side td:first-of-type {
-            background-color: #00A8CE;
+            background-color: #00A8CE !important;
         }
         .simple-table.style-top tr:first-child td .paragraph,
         .simple-table.style-side td:first-of-type .paragraph {
@@ -104,12 +104,13 @@
                             }
                             parent.removeChild(a);
                         });
-                        contentContainer.innerHTML += element.innerHTML; // Append the content
-                    });
 
-                    // Update table headers color
-                    contentContainer.querySelectorAll('.simple-table.style-top tr:first-child td').forEach(td => {
-                        td.style.backgroundColor = '#00A8CE';
+                        // Update table headers color directly in the fetched HTML
+                        element.querySelectorAll('.simple-table.style-top tr:first-child td').forEach(td => {
+                            td.style.backgroundColor = '#00A8CE';
+                        });
+
+                        contentContainer.innerHTML += element.innerHTML; // Append the content
                     });
                 } else {
                     console.log('No content found.');
