--- a/bloods.html
+++ b/bloods.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embed Content</title>
+    <title>Embed Text</title>
     <style>
         /* Ensure the font path is correct and accessible */
         @font-face {
@@ -24,45 +24,6 @@
             border: 1px solid #C9CDCF;
             background-color: #F8F8F8;
         }
-        .simple-table-wrapper {
-            padding: 20px 0;
-        }
-        .simple-table {
-            width: 100%;
-            border: 1px solid #C9CDCF;
-            border-spacing: 0;
-        }
-        .simple-table td.cell {
-            border-right: 1px solid #C9CDCF;
-            border-bottom: 1px solid #C9CDCF;
-            word-break: break-word;
-            background-color: #FFFFFF;
-            width: 50%;
-        }
-        .simple-table td.cell .paragraph {
-            width: 90%;
-            margin: 0 5%;
-            padding-bottom: 10px;
-            padding-top: 10px;
-            text-align: center;
-        }
-        .simple-table.style-top tr:first-child td,
-        .simple-table.style-side td:first-of-type {
-            background-color: #00A8CE !important;
-        }
-        .simple-table.style-top tr:first-child td .paragraph,
-        .simple-table.style-side td:first-of-type .paragraph {
-            font-weight: 700;
-        }
-        .simple-table tr:last-child td {
-            border-bottom: none;
-        }
-        .simple-table td:last-of-type {
-            border-right: none;
-        }
-        .simple-table .empty-content-area-element {
-            padding-left: 0px !important;
-        }
     </style>
 </head>
 <body>
@@ -70,7 +31,7 @@
     <script>
         async function loadContent() {
             const proxyUrl = 'https://api.allorigins.win/raw?url=';
-            const targetUrl = 'https://www.cheshiretravelclinic.co.uk/vaccinations.html'; // New target URL
+            const targetUrl = 'https://www.cheshiretravelclinic.co.uk/bloods.html'; // New target URL
             
             try {
                 console.log('Fetching data from', targetUrl);
@@ -104,12 +65,6 @@
                             }
                             parent.removeChild(a);
                         });
-
-                        // Update table headers color directly in the fetched HTML
-                        element.querySelectorAll('.simple-table.style-top tr:first-child td').forEach(td => {
-                            td.style.backgroundColor = '#00A8CE';
-                        });
-
                         contentContainer.innerHTML += element.innerHTML; // Append the content
                     });
                 } else {
